<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtNota3"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/ingrese_nota_3"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNota2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtNota4"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ingrese_nota_4"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNota3"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtNota1"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/ingrese_nota_1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtNota2"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/ingrese_nota_2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNota1"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button4"
        android:layout_width="137dp"
        android:layout_height="47dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="19dp"
        android:onClick="Menor"
        android:text="@string/menor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="137dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="38dp"
        android:onClick="Promediar"
        android:text="@string/promediar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNota4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="137dp"
        android:layout_height="47dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="17dp"
        android:onClick="Mayor"
        android:text="@string/mayor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/tvMayor"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/tvPromedio" />

    <TextView
        android:id="@+id/tvMenor"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/tvMayor" />

    <TextView
        android:id="@+id/tvPromedio"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/txtNota4" />
</androidx.constraintlayout.widget.ConstraintLayout>